Add public Event access and QR
